6. Fixed layout of container header and sidebar header

--- a/front-end/src/Container/Container.module.css
+++ b/front-end/src/Container/Container.module.css
@@ -16,6 +16,10 @@
     position: relative;
 }
 
+.header-title {
+    margin: 0;
+}
+
 .contents {
     display: flex;
     width: 100%;
