--- a/front-end/src/Container/Sidebar/Sidebar.module.css
+++ b/front-end/src/Container/Sidebar/Sidebar.module.css
@@ -29,6 +29,7 @@
     padding: 20px 5px;
     width: 100%;
     text-align: center;
+    margin: 0;
 }
 
 .sidebar-menu {
